...
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_below="@+id/signTrainerQuestionText"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/signTrainerExceptionMessage"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signTrainerVideoView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
...
